<resources>
    <string name="app_name">My Application</string>
    <string name="startBtn">Start</string>
    <string name="stepBtn">Step</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_home">Home</string>
    <string name="title_record">Record</string>
    <string name="title_training">Training</string>
    <string name="title_setting">Setting</string>

    <string name="lap_record_detail">Lap</string>
    <string name="time_record_detail">Time</string>
    <string name="distance_record_detail">Distance</string>
    <string name="pace_record_detail">Pace</string>
<!--setting-->
    <string name="setting_logout">Logout</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_about">About</string>
    <string name="setting_version">Version</string>
    <string name="setting_language">Language</string>
    <string name="setting_username">Username</string>

<!--    setting-language-selected-->
    <string name="setting_language_selected_title">Language Selected</string>
    <string name="setting_language_selected_english">English</string>
    <string name="setting_language_selected_italian">Italian</string>


<!--    setting-theme-selected-->
    <string name="setting_theme_selected_title">Theme Selected</string>
    <string name="setting_theme_selected_light">Light</string>
    <string name="setting_theme_selected_dark">Dark</string>


    <string name="home_add_record">AddRecord</string>



</resources>