<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/detail_lap"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/lap_record_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.25"

        />

    <TextView
        android:id="@+id/detail_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/time_record_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_lap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.25"
        />

    <TextView
        android:id="@+id/detail_distance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/distance_record_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.25"
        />

    <TextView
        android:id="@+id/detail_pace"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/pace_record_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.25"
        />

</androidx.constraintlayout.widget.ConstraintLayout>