<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/languageSelectedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_language_selected_title"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Menu Items -->
    <View
        android:id="@+id/divider0"
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="#CCCCCC"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/languageSelectedTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/menuLanguageEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/setting_language_selected_english"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/divider0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/menuLanguageEnglish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/menuLanguageItalian"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/setting_language_selected_italian"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/menuLanguageItalian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
